# mahoukaOS

./: README.md
mahouka_cad/: Cargo.toml
mahouka_cad/.cargo/: config.toml
mahouka_cad/src/: main.rs
